--- a/index.html
+++ b/index.html
@@ -8,26 +8,239 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+    /* --- Header --- */
+.header {
+  background: #0a192f;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.logo span {
+  color: #64ffda;
+}
+
+/* --- Menu hamburger --- */
+.menu-btn {
+  background: none;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 28px;
+  height: 21px;
+  cursor: pointer;
+}
+
+.menu-btn span {
+  display: block;
+  height: 3px;
+  width: 100%;
+  background: white;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+/* --- Mobile menu panel --- */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: -280px;
+  width: 280px;
+  height: 100%;
+  background: rgba(17, 34, 64, 0.98);
+  backdrop-filter: blur(12px);
+  box-shadow: -5px 0 20px rgba(0,0,0,0.4);
+  transition: right 0.4s ease;
+  display: flex;
+  flex-direction: column;
+  z-index: 2000;
+}
+
+.mobile-menu.active {
+  right: 0;
+}
+
+/* --- Header du menu --- */
+.menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 18px;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+}
+
+.menu-header h2 {
+  font-size: 1.3rem;
+}
+
+.close-btn {
+  font-size: 2rem;
+  color: white;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+/* --- Liens --- */
+.mobile-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.mobile-menu li {
+  border-bottom: 1px solid rgba(255,255,255,0.05);
+}
+
+.mobile-menu a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 16px 20px;
+  font-size: 1.1rem;
+  transition: background 0.3s ease;
+}
+
+.mobile-menu a:hover {
+  background: rgba(255, 255, 255, 0.08);
+  padding-left: 28px;
+}
+
+/* --- Overlay --- */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(245, 239, 239);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  z-index: 1500;
+}
+
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* --- Grand écran --- */
+@media (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+}
+/* --- Menu version bureau --- */
+.desktop-menu {
+  display: none;
+}
+
+.desktop-menu ul {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  margin: 0;
+  padding: 0;
+}
+
+.desktop-menu a {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.desktop-menu a:hover {
+  color: #64ffda;
+}
+
+/* --- Affichage bureau --- */
+@media (min-width: 768px) {
+  .desktop-menu {
+    display: block;
+  }
+
+  .menu-btn {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+}
+/* Mobile menu open/close */
+#mobileMenu.active {
+  transform: translateX(0);
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+
+
   </style>
 </head>
 <body class="bg-gray-50 text-gray-700">
 
   <!-- NAVBAR -->
-  <header class="bg-white/80 backdrop-blur-md fixed w-full z-50 border-b border-gray-100">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
-      <a href="#" class="text-2xl font-bold text-blue-600">Cadre<span class="text-gray-800">Annonces</span></a>
-      <nav class="hidden md:flex items-center space-x-8 font-medium">
-        <a href="#" class="hover:text-blue-600">Accueil</a>
-        <a href="#annonces" class="hover:text-blue-600">Annonces</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
-        <a href="publier.html" class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700 transition">Publier</a>
-      </nav>
-      <button id="menuBtn" class="md:hidden text-2xl text-gray-700">
-        <i class="fa-solid fa-bars"></i>
-      </button>
-    </div>
-  </header>
+<header class="flex items-center justify-between px-4 py-3 bg-white shadow-md">
+  <h1 class="text-2xl font-bold text-blue-600">CadreAnnonces</h1>
 
+  <!-- Bouton hamburger visible sur mobile -->
+  <button id="menuBtn" class="md:hidden text-3xl text-gray-700">
+    ☰
+  </button>
+
+  <!-- Menu visible sur desktop -->
+  <nav class="hidden md:flex gap-6">
+    <a href="#" class="hover:text-blue-600">Accueil</a>
+    <a href="#annonces" class="hover:text-blue-600">Annonces</a>
+    <a href="#contact" class="hover:text-blue-600">Contact</a>
+    <a href="pages/publier.html" class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700">Publier</a>
+  </nav>
+</header>
+
+<!-- Overlay pour le fond sombre -->
+<div id="overlay" class="fixed inset-0 bg-black/50 opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
+
+<!-- MENU SLIDE MOBILE -->
+<nav id="mobileMenu"
+  class="fixed top-0 right-0 w-64 h-full bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 md:hidden">
+  <div class="flex justify-between items-center p-4 border-b">
+    <h2 class="text-lg font-bold text-blue-600">Menu</h2>
+    <button id="closeBtn" class="text-2xl text-gray-700">&times;</button>
+  </div>
+  <ul class="flex flex-col p-4 space-y-4">
+    <li><a href="#" class="hover:text-blue-600">Accueil</a></li>
+    <li><a href="#annonces" class="hover:text-blue-600">Annonces</a></li>
+    <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
+    <li><a href="pages/publier.html"
+        class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700 text-center">Publier</a></li>
+  </ul>
+</nav>
+
+  
+    <!-- Overlay -->
+    <div id="overlay" class="fixed inset-0 bg-black/40 opacity-0 pointer-events-none transition-opacity duration-300 md:hidden"></div>
+  </header>
+  
+  
   <!-- HERO -->
   <section class="pt-32 pb-24 bg-gradient-to-br from-blue-600 to-blue-500 text-white text-center">
     <div class="max-w-3xl mx-auto px-6">
@@ -109,6 +322,35 @@
         grid.innerHTML = "<p>Impossible de charger les annonces.</p>";
       }
     }
+    
+  const menuBtn = document.getElementById('menuBtn');
+  const closeBtn = document.getElementById('closeBtn');
+  const mobileMenu = document.getElementById('mobileMenu');
+  const overlay = document.getElementById('overlay');
+
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.remove('translate-x-full');
+    overlay.classList.add('opacity-100');
+    overlay.classList.remove('pointer-events-none');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    mobileMenu.classList.add('translate-x-full');
+    overlay.classList.remove('opacity-100');
+    overlay.classList.add('pointer-events-none');
+  });
+
+  overlay.addEventListener('click', () => {
+    mobileMenu.classList.add('translate-x-full');
+    overlay.classList.remove('opacity-100');
+    overlay.classList.add('pointer-events-none');
+  });
+
+
+
+
+
+
 
     window.onload = loadAnnonces;
   </script>
