--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <a href="#" class="hover:text-blue-600">Accueil</a>
     <a href="#annonces" class="hover:text-blue-600">Annonces</a>
     <a href="#contact" class="hover:text-blue-600">Contact</a>
-    <a href="pages/publier.html" class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700">Publier</a>
+    <a href="publier.html" class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700">Publier</a>
   </nav>
 </header>
 
@@ -230,7 +230,7 @@
     <li><a href="#" class="hover:text-blue-600">Accueil</a></li>
     <li><a href="#annonces" class="hover:text-blue-600">Annonces</a></li>
     <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
-    <li><a href="pages/publier.html"
+    <li><a href="publier.html"
         class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700 text-center">Publier</a></li>
   </ul>
 </nav>
